--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-table></app-table>
+<!--<app-table></app-table>-->
+<!--<app-table-data title="{{title}}" [tableJsonArray]="tableJsonArray"></app-table-data>-->
+<!--<app-filter [tableJsonArray]="tableJsonArray" (sendFilter)="recievedFilter($event)"></app-filter>-->
+<!--<app-tablemat [tableJsonArray]="tableJsonArray"></app-tablemat>-->
+<app-view></app-view>
